# xnet

./: CMakeLists.txt  README.md  test.cpp
lib/: http.hpp  socket.hpp  uri.hpp  xhttp.hpp  xsocket.hpp
tests/: echoClient.cpp  echoServer.cpp  http.cpp  httpPost.cpp  music163.cpp  uri.cpp
